--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,7 @@ h2{font-weight: 200;}
 
 
 .navs{font-size: 2vw;} 
+.detailBlock{background-color: blue;}
+.details{background-color: #111;}
+.price{color: crimson;font-size: 3rem;}
+.listContainer{background-color: #333;}
