--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,11 @@ body{background-color: blue;}
 .header{height: 8vw;background-color: #111;}
 .user{font-size: 4vw;width: 5vw;height:5vw;cursor: pointer;}
 .user i{width: 100%;color: crimson;}
+#circle{background-color: crimson;cursor: pointer;}
+#circle i{font-size: 1vw;margin-top: 35%;}
 
 .navItems{font-size: 3vw;}
-
+.navBar{height: 4vw;}
 a{text-decoration: none;font-size: 4vw;}
 li{list-style: none;height: 40%;margin-top: 3%;border:none /*yellow solid 1px*/;} 
 
@@ -24,7 +26,6 @@ nav{width: 100%;height: 3vw;background-color:#333;border-radius: 10px;padding: 0
 .number{background-color: crimson;border-radius: 10px;font-size: 0.8vw;width: 100%;height: 1.5vw;padding: 0%;}
 .searchBar{margin: 1% auto;padding:1%;}
 input{font-size: 1.6vw;padding: 0.5% 1%;width: 40%;border-radius: 4rem;}
-.search{margin: 0 2%;background-color: crimson;width: 3vw;height: 3vw;}
 h2{font-weight: 200;}
 .card{width:18rem;background-color:blue;color: black;}
 .dropItems{font-size: 2vw;}
