--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,5 @@ h2{font-weight: 200;}
 .details{background-color: #111;height: 95%;}
 .price{color: crimson;font-size: 3rem;}
 .listContainer{background-color: #333;}
+
+.cartContainer{background-color: #333;}
