Nueva Fuente y arreglando render

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   background-color: #111; 
   color: white;
   height: 80rem;
+  font-family: 'Raleway', sans-serif;
 }
 body{background-color: blue;}
 .header{height: 8vw;background-color: #111;}
