--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ nav{width: 100%;height: 3vw;background-color:#333;border-radius: 10px;padding: 0
 .wrap{width: 98%;height: 100%;display: grid;grid-template-columns: 20% 20% 20% 20% 20%;grid-template-rows: auto;margin: 0 auto;}
 .navOptions{height: 3vw;cursor: pointer;}.navOptions:hover{background-color: #111;transition: 1s;}
 .cart{height: 100%;width: 100%;margin: 0 auto;padding: 0% 6%;cursor: pointer;}
-.cartContainer{display: grid;grid-template-columns: 50% 50%;grid-template-rows: auto;padding: 2%;width: 25%;margin: 3% auto;height: 60%;cursor: pointer;}
+.cartContainer{padding: 2%;}
 .number{background-color: crimson;border-radius: 10px;font-size: 0.8vw;width: 100%;height: 1.5vw;padding: 0%;}
 .searchBar{margin: 1% auto;padding:1%;}
 input{font-size: 1.6vw;padding: 0.5% 1%;width: 40%;border-radius: 4rem;}
