--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,6 @@ h2{font-weight: 200;}
 .totalContainer{background-color: #111;width: 20rem;height: 8rem;margin: 0 auto;border: crimson solid 2px;}
 .total{font-size: 3vw;color: crimson;}
 .cartTitle{font-size: 5vw;color: #111;}
+
+.countContainer{background-color: #333;}
+.buttonAligners{width:55%}
