--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,13 @@ nav{width: 100%;height: 3vw;background-color:#333;border-radius: 10px;padding: 0
 .searchBar{margin: 1% auto;padding:1%;}
 input{font-size: 1.6vw;padding: 0.5% 1%;width: 40%;border-radius: 4rem;}
 h2{font-weight: 200;}
-.card{width:18rem;background-color:blue;color: black;}
+.card{width:18rem;background-color:white;color: black;}
 .dropItems{font-size: 2vw;}
 .image{height:100%;width: 100%;}
 
 
 .navs{font-size: 2vw;} 
-.detailBlock{background-color: blue;}
+.detailBlock{background-color: #333;}
 .details{background-color: #111;height: 95%;}
 .price{color: crimson;font-size: 3rem;}
 .listContainer{background-color: #333;}
@@ -46,3 +46,4 @@ h2{font-weight: 200;}
 
 .countContainer{background-color: #333;}
 .buttonAligners{width:55%}
+.order{font-size: 2vw;}
