--- a/src/Tools.css
+++ b/src/Tools.css
@@ -1,3 +1,4 @@
 /* Estilos en clases para ayudar a alinear los elementos */
 body{background-color: #222;}
 .center{margin: 0 auto;} /*Centrado*/
+.crimson{color: crimson;}
