--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,8 @@ h2{font-weight: 200;}
 .total{font-size: 3vw;color: crimson;}
 .cartTitle{font-size: 5vw;color:white;}
 
+
 .countContainer{background-color: #333;}
 .buttonAligners{width:55%}
 .order{font-size: 2vw;}
+.formButton{font-size:'1rem';width:10rem}
