--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,4 @@ h2{font-weight: 200;}
 .buttonAligners{width:55%}
 .order{font-size: 2vw;}
 .formButton{font-size:'1rem';width:10rem}
+.cardDescription{font-size: 2vw;}
